--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Getting started tutorial</title>
+  <title>A simple todo app</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -71,7 +71,7 @@
 
 <body>
   <div class="info">
-    <h1>todo</h1>
+    <h1>todo-web-api</h1>
     <p>Version 1.0.0</p>
 
     <h3>OpenAPI spec: <a href="./openapi.json">/openapi.json</a></h3>
